# esriscraper

./: .gitignore  README.md  pyproject.toml
esriscraper/: check.py  explore.py  scrape.py  utils.py
